--- a/works.html
+++ b/works.html
@@ -131,8 +131,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/hologram-shooter">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/hologram-shooter">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/hologram-shooter">
                                 Github
@@ -183,8 +183,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/animated-tab-bar-v2">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/animated-tab-bar-v2">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/animated-tab-bar-v2">
                                 Github
@@ -235,8 +235,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/svg-watch">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/svg-watch">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/svg-watch">
                                 Github
@@ -287,8 +287,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/css-goey-footer">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/css-goey-footer">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/css-goey-footer">
                                 Github
@@ -339,8 +339,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/social-media-icons">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/social-media-icons">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/social-media-icons">
                                 Github
@@ -391,8 +391,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/css-glowing-icons">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/css-glowing-icons">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-laSiz-lab/css-glowing-icons">
                                 Github
@@ -443,8 +443,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/navigation">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/navigation">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/navigation">
                                 Github
@@ -495,8 +495,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/vertical-menu">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/vertical-menu">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/vertical-menu">
                                 Github
@@ -547,8 +547,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/yet-another-slider">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/yet-another-slider">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/yet-another-slider">
                                 Github
@@ -599,8 +599,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/candy-color-button-animation">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/candy-color-button-animation">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/candy-color-button-animation">
                                 Github
@@ -651,8 +651,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/buttons-css-hover">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/buttons-css-hover">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/buttons-css-hover">
                                 Github
@@ -703,8 +703,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/download-button-animation">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/download-button-animation">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/download-button-animation">
                                 Github
@@ -755,8 +755,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/login-form">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/login-form">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/login-form">
                                 Github
@@ -807,8 +807,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/log-in-sign-form">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/log-in-sign-form">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/log-in-sign-form">
                                 Github
@@ -859,8 +859,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/neumorphic-elements">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/neumorphic-elements">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/neumorphic-elements">
                                 Github
@@ -911,8 +911,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/image-slider">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/image-slider">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/image-slider">
                                 Github
@@ -963,8 +963,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/drag-and-drop-test">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/drag-and-drop-test">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/drag-and-drop-test">
                                 Github
@@ -1015,8 +1015,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/keyboard-hero">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/keyboard-hero">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/keyboard-hero">
                                 Github
@@ -1067,8 +1067,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/dreaming-of-jupiter">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/dreaming-of-jupiter">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/dreaming-of-jupiter">
                                 Github
@@ -1119,8 +1119,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/art-gallery">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/art-gallery">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/art-gallery">
                                 Github
@@ -1171,8 +1171,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/waves-animation-in-canvas">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/waves-animation-in-canvas">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/waves-animation-in-canvas">
                                 Github
@@ -1223,8 +1223,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/sagi-site">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/sagi-site">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/sagi-site">
                                 Github
@@ -1275,8 +1275,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/3d-carousel">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/3d-carousel">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/3d-carousel">
                                 Github
@@ -1327,8 +1327,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/150ml-of-vanilla-css">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/150ml-of-vanilla-css">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/150ml-of-vanilla-css">
                                 Github
@@ -1379,8 +1379,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/animated-tab-bar">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/animated-tab-bar">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/animated-tab-bar">
                                 Github
@@ -1431,8 +1431,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/app-admin-menus">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/app-admin-menus">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/app-admin-menus">
                                 Github
@@ -1483,8 +1483,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/bootstrap-4-navbar">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/bootstrap-4-navbar">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/bootstrap-4-navbar">
                                 Github
@@ -1535,8 +1535,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/interactive-3d-cube">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/interactive-3d-cube">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/interactive-3d-cube">
                                 Github
@@ -1587,8 +1587,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/snow-pure-css">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/snow-pure-css">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/snow-pure-css">
                                 Github
@@ -1639,8 +1639,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/space-globethree-js">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/space-globethree-js">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/space-globethree-js">
                                 Github
@@ -1691,8 +1691,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/social-media-animation">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/social-media-animation">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/social-media-animation">
                                 Github
@@ -1743,8 +1743,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/simple-css-waves">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/simple-css-waves">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/Siz-lab/simple-css-waves">
                                 Github
@@ -1796,8 +1796,8 @@
                             Link
                         </dt>
                         <dd class="works-list__info-body">
-                            <a href="https://works-archives.sizlab.xyz/dreaming-of-jupiter">
-                                Works Archives
+                            <a href="https://archives.sizlab.xyz/dreaming-of-jupiter">
+                                アーカイブ
                             </a><br>
                             <a href="https://github.com/CielDev1234/dreaming-of-jupiter">
                                 Github
